# fullsend

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  Makefile  README.md  ruff.toml
.github/workflows/: lint.yml
docs/: architecture.md  methodology.md  roadmap.md  vision.md
docs/ADRs/: 0002-initial-fullsend-design.md  0003-org-config-repo-convention.md
docs/problems/: agent-architecture.md  autonomy-spectrum.md  code-review.md  codebase-context.md  contributor-guidance.md  governance.md  human-factors.md  intent-representation.md  performance-verification.md  production-feedback.md  repo-readiness.md  security-threat-model.md  testing-agents.md
experiments/adr46-claude-scanner/: README.md  RESULTS.md  scan.sh
experiments/adr46-scanner/: README.md  RESULTS.md
experiments/prompt-injection-defense/: README.md  pyproject.toml  results-raw.json  results.md  runner.py
experiments/prompt-injection-defense/attacks/: benign.yaml  bypass-classifier.yaml  bypass-sandwiching.yaml  bypass-spotlighting.yaml  obvious-injection.yaml  subtle-injection.yaml
experiments/prompt-injection-defense/defenses/: attacks.py  classifier.py  client.py  combined.py  interface.py  no_defense.py  sandwiching.py  spotlighting.py  validation.py
experiments/prompt-injection-defense/tests/: test_attacks.py  test_classifier.py  test_combined.py  test_no_defense.py  test_runner.py  test_sandwiching.py  test_spotlighting.py  test_validation.py
experiments/promptfoo-eval/: .gitignore  README.md  package.json  promptfooconfig.yaml
hack/: lint-adr-frontmatter
(+10 files in other folders)
