[project]
name = "prompt-injection-defense"
version = "0.1.0"
description = "Experiment: layered prompt injection defense for commit message review"
requires-python = ">=3.12"
dependencies = [
    "anthropic[vertex]>=0.75.0",
    "pyyaml>=6.0",
    "transformers>=4.40",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["defenses*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
